samples/_failures_safe/1761154123_b88067_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31c8879d.c: In function ‘main’:
./samples/SAFE/__tmp_31c8879d.c:173:25: error: expected ‘)’ at end of input
  173 |     if (len > 0 && input
      |        ~                ^
      |                         )
./samples/SAFE/__tmp_31c8879d.c:173:5: error: expected declaration or statement at end of input
  173 |     if (len > 0 && input
      |     ^~
